--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -2,16 +2,20 @@
 name: Learning
 
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    # trigger every 5 minutes
+    - cron:  '*/5 * * * 1-5'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        food: [ "pizza", "beer" ]
+        branch: [ "master", "test" ]
     steps:
-      - name: First way
-        run: echo $${ matrix.food }
+      - name: Checkout branch
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ matrix.branch }}
+      - name: Perform action
+        run: cat foo.rb
