--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -2,16 +2,16 @@
 name: Learning
 
 on:
-  schedule:
-    # trigger every 5 minutes
-    - cron:  '*/5 * * * 1-5'
+  push:
+    branches:
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        branch: [ "master", "test" ]
+        branch: [ master, test ]
     steps:
       - name: Checkout branch
         uses: actions/checkout@v2
