--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -5,8 +5,21 @@ on:
   push:
     branches:
       - trigger
+  # schedule every 7 minutes
 
 jobs:
+  trigger-commit:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout branch
+      uses: actions/checkout@v2
+      with:
+        ref: trigger
+    - name: Perform action
+      run: |
+        git commit --allow-empty -m "trigger action"
+        git push origin trigger
+
   build:
     runs-on: ubuntu-latest
     strategy:
