--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -1,5 +1,5 @@
 
-name: Learning Trigger
+name: Learning
 
 on:
   push:
@@ -17,7 +17,10 @@ jobs:
         ref: trigger
     - name: Perform action
       run: |
-        git commit --allow-empty -m "trigger action"
+        git config user.email "commit-trigger-bot@example.com"
+        git config user.name "Commit Trigger Bot"
+
+        git commit --allow-empty -m "trigger action at $(date +%s)"
         git push origin trigger
 
   build:
