--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -17,5 +17,5 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ matrix.branch }}
-      - name: Perform action
+      - name: Do the thing
         run: cat foo.rb
