--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      FOO: ${{ matrix.branch }}
     strategy:
       matrix:
         branch: [ master, test ]
